--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,12 @@
 
 tasks:
     - name: Launch FarmData2
-      init: ./bin/fd2-up.bash
+      init: npm install
+      before: ./bin/fd2-up.gitpod.bash
+      command:
+        npm run build:fd2
+        npm run build:examples
+        npm run build:school
+
+        installDB.bash
           
